@@ -1,3 +1,9 @@
+2008-09-30  Joel Brobecker  <brobecker@adacore.com>
+
+	* ada-lang.c (ada_evaluate_subexp) [UNOP_IND]: Remove strange
+	treatment of expect_type. Return the correct type when dereferencing
+	an integer.
+
 2008-09-30  Tom Tromey  <tromey@redhat.com>
 
 	PR gdb/2484:
